# exc

./: .gitignore  Cargo.toml  README.md
exc-diagnostic/: Cargo.toml
exc-diagnostic/src/: error_codes.rs  lib.rs  warning_codes.rs
exc-parse/: Cargo.toml
exc-parse/src/: ast.rs  lexer.rs  lib.rs  low_lexer.rs  parse.rs  tests.rs  token_skippers.rs
exc-parse/src/ast/: node_id.rs  node_id_allocator.rs  punctuated.rs
exc-parse/src/lexer/: symbols.rs  token.rs  token_kind.rs  token_literal.rs  token_literal_kind.rs
exc-parse/src/low_lexer/: cursor.rs  low_token.rs  low_token_kind.rs  low_token_literal_kind.rs  low_token_number_literal_kind.rs
exc-parse/src/parse/: parser.rs  token_type.rs
exc-parse/src/tests/: fuzz.rs  module_item_alias.rs  module_item_extern.rs  module_item_fn.rs  module_item_impl.rs  module_item_interface.rs  module_item_struct.rs  module_item_use.rs  stmt_use.rs
exc-parse/src/tests/fuzz-artifacts/: timeout-aa5d71c522e025bc25fca44f7f7366f2f18ecfd9  timeout-bc1f229c8ca8490dfb38478ea317f3a1f0b483f2
exc-resolve/: Cargo.toml
exc-resolve/src/: lib.rs  path_visualizers.rs  resolve_global.rs  resolve_local.rs  resolve_module.rs
exc-resolve/src/resolve_global/: diagnostics_receiver.rs  global_symbol_registry.rs  module_registry.rs  redirect_registry.rs  resolve_module_decl.rs  source_file_resolver.rs
exc-resolve/src/resolve_local/: local_symbol_registry.rs
exc-resolve/src/resolve_module/: global_symbol_registry.rs  module.rs  module_registry.rs  redirect_registry.rs  resolve_use.rs  source_file_resolver.rs  visibility.rs
exc-span/: Cargo.toml
exc-span/src/: lib.rs  line_col.rs  pos.rs  source_file.rs  source_map.rs  span.rs
exc-symbol/: Cargo.toml
exc-symbol/src/: chunk.rs  interner.rs  lib.rs  symbol.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_target_parse.rs  fuzz_target_parse_structed.rs
src/: main.rs  tests.rs  write_diagnostic.rs
src/tests/: basic.exc  basic.rs  submodule.exc
src/tests/compilation/: negative.rs  positive.rs
src/tests/compilation/negative/: simple_unexpected_token.rs
src/tests/compilation/negative/sources/: simple_unexpected_token.exc
src/tests/compilation/positive/: simple_hello_world.rs
src/tests/compilation/positive/sources/: simple_hello_world.exc
src/tests/compiler/resolve/module/: mod.rs
src/tests/compiler/resolve/module/test_000001/: mod.rs
src/tests/compiler/resolve/module/test_000001_no_path_traversal/: main.exc  mod.rs
src/tests/compiler/resolve/module/test_000002_access_sibling_module/: main.exc  mod.rs  sibling.exc
src/tests/compiler/resolve/module/test_000003_no_invalid_module_access/: invalid-01-glob.exc  mod.rs
