[package]
name = "exc"
description = "a language with experimental syntax and type system"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
exc-diagnostic = { path = "./exc-diagnostic" }
exc-parse = { path = "./exc-parse" }
exc-resolve = { path = "./exc-resolve" }
exc-span = { path = "./exc-span" }
exc-symbol = { path = "./exc-symbol" }
clap = { version = "4", features = ["derive"] }
colored = { version = "2" }
thiserror = { version = "1" }
tokio = { version = "1.34", features = ["macros", "rt", "rt-multi-thread"] }

[workspace]
members = [
  "./exc-diagnostic",
  "./exc-parse",
  "./exc-resolve",
  "./exc-span",
  "./exc-symbol",
]
