[package]
name = "exc-resolve"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
exc-diagnostic = { path = "../exc-diagnostic" }
exc-parse = { path = "../exc-parse" }
exc-span = { path = "../exc-span" }
exc-symbol = { path = "../exc-symbol" }

colored = { version = "2" }
thiserror = { version = "1" }
tokio = { version = "1.34", features = ["macros", "rt"] }
