[package]
name = "exc-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
exc-diagnostic = { path = "../exc-diagnostic" }
exc-parse = { path = "../exc-parse" }
exc-span = { path = "../exc-span" }
exc-symbol = { path = "../exc-symbol" }

[dependencies.exc]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "fuzz_target_parse"
path = "fuzz_targets/fuzz_target_parse.rs"
test = false
doc = false
